--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "browserify": "^6.0.3",
     "jshint": "^2.5.6",
     "mocha": "^1.21.4",
+    "mout": "^0.11.0",
     "native-promise-only": "^0.7.6-a",
     "sinon": "^1.10.3",
     "uglify-js": "^2.4.15"
