--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/googleanalytics/javascript-api-utils",
   "devDependencies": {
     "browserify": "^6.0.3",
-    "jshint": "^2.5.6",
+    "jshint": "^2.6.2",
+    "lodash-node": "^3.3.1",
     "mocha": "^1.21.4",
     "mout": "^0.11.0",
     "native-promise-only": "^0.7.6-a",
