--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "browserify": "^6.0.3",
     "jshint": "^2.6.2",
-    "lodash-node": "^3.3.1",
+    "lodash": "^3.7.0",
     "mocha": "^1.21.4",
     "mout": "^0.11.0",
     "native-promise-only": "^0.7.6-a",
