Add a getAuthenticated method, which gets columns specific to a property/view.

--- a/.jshintrc
+++ b/.jshintrc
@@ -3,7 +3,9 @@
   "boss": true,
   "esnext": true,
   "expr": true,
+  "funcscope": true,
   "mocha": true,
   "node": true,
-  "quotmark": "single"
+  "quotmark": "single",
+  "shadow": true
 }
