--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
   },
   "homepage": "https://github.com/googleanalytics/javascript-api-utils",
   "devDependencies": {
-    "browserify": "^9.0.8",
-    "jshint": "^2.7.0",
-    "lodash": "^3.7.0",
-    "mocha": "^2.2.4",
-    "mout": "^0.11.0",
-    "native-promise-only": "^0.7.8-a",
-    "sinon": "^1.14.1",
-    "uglify-js": "^2.4.20"
+    "browserify": "^13.1.1",
+    "jshint": "^2.9.4",
+    "lodash": "^4.17.2",
+    "mocha": "^3.2.0",
+    "mout": "^1.0.0",
+    "native-promise-only": "^0.8.1",
+    "sinon": "^1.17.6",
+    "uglify-js": "^2.7.5"
   }
 }
